--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-APP_NAME=Laravel
+APP_NAME="Baiyi Mall"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:DcwMPa6esZVGio4Y6TvqmDkcrCSOUjPxFoF1uE3jV78=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://baiyi-mall.test
 SECURE=false
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
+DB_DATABASE=baiyi-mall
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
@@ -47,5 +47,5 @@ WECHAT_PAYMENT_MINIAPP_ID=
 WECHAT_PAYMENT_MCH_ID=
 WECHAT_PAYMENT_KEY=
 
-WECHAT_MINI_PROGRAM_APPID=
-WECHAT_MINI_PROGRAM_SECRET=
+WECHAT_MINI_PROGRAM_APPID=wx9be07525deef2c1f
+WECHAT_MINI_PROGRAM_SECRET=cde73da66931245f58731e8728a316a9
