--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,9 @@ WECHAT_PAYMENT_KEY=
 
 WECHAT_MINI_PROGRAM_APPID=wx9be07525deef2c1f
 WECHAT_MINI_PROGRAM_SECRET=cde73da66931245f58731e8728a316a9
+
+# qiniu
+QINIU_ACCESS_KEY=2ALHswyOEl_pdJuOwQvdN8gFGIYM6uyCGMOrS3tg
+QINIU_SECRET_KEY=idUjR3xHaVD8XT5mJD3wahYtzcIytsGRNkuJLalE
+QINIU_BUCKET=baiyi-shop
+QINIU_DOMAIN=pxdcqvtn0.bkt.clouddn.com
