--- a/.env.example
+++ b/.env.example
@@ -56,4 +56,4 @@ QINIU_BUCKET=baiyi-shop
 QINIU_DOMAIN=http://pxdcqvtn0.bkt.clouddn.com
 
 # sms config
-YUNPIAN_API_KEY=52632f96a4993cc3cd1ea3982ec3d0fa
+YUNPIAN_API_KEY=
