change qiniu domain

--- a/.env.example
+++ b/.env.example
@@ -53,7 +53,7 @@ WECHAT_MINI_PROGRAM_SECRET=a5a740d742ca315afccdaa0f2616991a
 QINIU_ACCESS_KEY=2ALHswyOEl_pdJuOwQvdN8gFGIYM6uyCGMOrS3tg
 QINIU_SECRET_KEY=idUjR3xHaVD8XT5mJD3wahYtzcIytsGRNkuJLalE
 QINIU_BUCKET=baiyi-shop
-QINIU_DOMAIN=http://pxdcqvtn0.bkt.clouddn.com
+QINIU_DOMAIN=http://cdn.foridom.com
 
 # sms config
 YUNPIAN_API_KEY=
