--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
 		"league/fractal": "^0.17.0",
 		"marktopper/doctrine-dbal-timestamp-type": "^1.0",
 		"milon/barcode": "^5.3",
+		"overtrue/laravel-filesystem-qiniu": "^1.0",
 		"overtrue/laravel-uploader": "~0.0.7",
 		"overtrue/laravel-wechat": "~4.0",
 		"predis/predis": "1.*",
