--- a/.env.example
+++ b/.env.example
@@ -13,11 +13,11 @@ DB_DATABASE=baiyi-mall
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-SESSION_DRIVER=file
+BROADCAST_DRIVER=redis
+CACHE_DRIVER=redis
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
-QUEUE_DRIVER=sync
+QUEUE_DRIVER=redis
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -57,3 +57,6 @@ QINIU_DOMAIN=http://cdn.foridom.com
 
 # sms config
 YUNPIAN_API_KEY=
+
+#ngrok config
+NGROK_URL=http://ec12b68c.ngrok.io
