--- a/.env.example
+++ b/.env.example
@@ -42,6 +42,10 @@ API_DEBUG=true
 
 PAY_DEBUG=true
 
+# wechat
+WECHAT_OFFICIAL_ACCOUNT_APPID=wx21c3842368921a28
+WECHAT_OFFICIAL_ACCOUNT_SECRET=27304b5351f61c2c0f2955058f435cde
+
 WECHAT_PAYMENT_MINIAPP_ID=
 WECHAT_PAYMENT_MCH_ID=
 WECHAT_PAYMENT_KEY=
