add wechat token

--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,7 @@ PAY_DEBUG=true
 # wechat
 WECHAT_OFFICIAL_ACCOUNT_APPID=
 WECHAT_OFFICIAL_ACCOUNT_SECRET=
+WECHAT_OFFICIAL_ACCOUNT_TOKEN=
 
 WECHAT_PAYMENT_MINIAPP_ID=
 WECHAT_PAYMENT_MCH_ID=
