--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 	"type": "project",
 	"require": {
 		"php": ">=7.0.0",
-		"barryvdh/laravel-cors": "^0.11.2",
+		"barryvdh/laravel-cors": "^0.10",
 		"encore/laravel-admin": "1.5.19",
 		"dingo/api": "2.0.0-alpha1",
 		"fideloper/proxy": "~3.3",
@@ -20,7 +20,6 @@
 		"ibrand/laravel-miniprogram-poster": "^1.1",
 		"ibrand/laravel-shopping-cart": "^1.3",
 		"ibrand/laravel-sms": "~1.0",
-		"ibrand/common": "~1.2",
 		"ibrand/backend": "dev-guojiang",
 		"ibrand/laravel-ueditor": "^1.0",
 		"ibrand/pay": "~0.2",
@@ -39,7 +38,7 @@
 		"milon/barcode": "^5.3",
 		"overtrue/laravel-filesystem-qiniu": "^1.0",
 		"overtrue/laravel-uploader": "~0.0.7",
-		"overtrue/wechat":"^4.2",
+		"overtrue/laravel-wechat": "~4.0",
 		"predis/predis": "1.*",
 		"prettus/l5-repository": "^2.1",
 		"qiniu/php-sdk": "^7.0",
