add beanbun and nice classification

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
 		"intervention/image": "^2.3",
 		"jenssegers/agent": "^2.4",
 		"kalnoy/nestedset": "^4.1",
+		"kiddyu/beanbun": "^1.0",
 		"laracasts/flash": "^2.0",
 		"laravel/framework": "5.5.*",
 		"laravel/passport": "^4.0",
