--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
 		"php": ">=7.0.0",
 		"barryvdh/laravel-cors": "^0.10",
 		"dingo/api": "2.0.0-alpha1",
+		"doctrine/dbal": "^2.10",
 		"encore/laravel-admin": "1.5.19",
 		"fideloper/proxy": "~3.3",
 		"ibrand/backend": "dev-guojiang",
