支付宝支付参数

--- a/.env.example
+++ b/.env.example
@@ -54,6 +54,12 @@ WECHAT_PAYMENT_KEY=
 WECHAT_MINI_PROGRAM_APPID=
 WECHAT_MINI_PROGRAM_SECRET=
 
+# alipay
+ALI_PAYMENT_APP_ID=
+ALI_PAYMENT_PUBLIC_KEY=
+ALI_PAYMENT_PRIVATE_KEY=
+
+
 # qiniu
 QINIU_ACCESS_KEY=
 QINIU_SECRET_KEY=
