--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,10 @@
 		],
 		"psr-4": {
 			"App\\": "app/"
-		}
+		},
+		"files": [
+			"bootstrap/helpers.php"
+		]
 	},
 	"autoload-dev": {
 		"psr-4": {
