--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
 		"laravel/framework": "5.5.*",
 		"laravel/passport": "^4.0",
 		"laravel/tinker": "~1.0",
+		"laravel/horizon": "^1.2",
 		"laravelcollective/html": "^5.5",
 		"lavary/laravel-menu": "~1.7",
 		"league/fractal": "^0.17.0",
