--- a/.env.example
+++ b/.env.example
@@ -66,6 +66,13 @@ QINIU_SECRET_KEY=
 QINIU_BUCKET=
 QINIU_DOMAIN=
 
+#ali-oss
+OSS_ACCESS_KEY=
+OSS_SECRET_KEY=
+OSS_ENDPOINT=
+OSS_BUCKET=
+OSS_IS_CNAME=
+
 # sms config
 YUNPIAN_API_KEY=
 
