阿里云oss上传修复,composer包发布

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
 		"doctrine/dbal": "^2.10",
 		"encore/laravel-admin": "1.5.19",
 		"fideloper/proxy": "~3.3",
+		"foridom/ali-oss-storage": "dev-master",
 		"foridom/backend": "dev-master",
 		"h4cc/wkhtmltopdf-amd64": "0.12.x",
 		"ibrand/laravel-active": "~2.0",
@@ -27,7 +28,6 @@
 		"ibrand/laravel-ueditor": "^1.0",
 		"ibrand/pay": "~0.2",
 		"ibrand/setting": "^1.1",
-		"iidestiny/laravel-filesystem-oss": "^1.2",
 		"intervention/image": "^2.5",
 		"jenssegers/agent": "^2.4",
 		"kalnoy/nestedset": "^4.1",
