尼斯分类爬虫

--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,11 @@
 		"doctrine/dbal": "^2.10",
 		"doododo/ocr": "^1.0",
 		"encore/laravel-admin": "1.5.19",
+		"fabpot/goutte": "4.0",
 		"fideloper/proxy": "~3.3",
 		"foridom/ali-oss-storage": "dev-master",
 		"foridom/backend": "dev-master",
+		"guzzlehttp/guzzle": "^6.5",
 		"h4cc/wkhtmltopdf-amd64": "0.12.x",
 		"ibrand/laravel-active": "~2.0",
 		"ibrand/laravel-miniprogram-poster": "^1.1",
@@ -32,7 +34,6 @@
 		"intervention/image": "^2.5",
 		"jenssegers/agent": "^2.4",
 		"kalnoy/nestedset": "^4.1",
-		"kiddyu/beanbun": "^1.0",
 		"laracasts/flash": "^2.0",
 		"laravel/framework": "5.5.*",
 		"laravel/horizon": "^1.2",
